--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <h1>Adarsh</h1>
-        <h2>Welcome to Git 🚀</h2>
+        <h2>Welcome to Github 🚀</h2>
         <p>Version control made simple and powerful</p>
     </div>
 
